--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     region: singapore
     plan: free
     buildCommand: "render-build.sh"
-    startCommand: "bundle exec ruby app.rb"
+    startCommand: "bundle exec ruby hello.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
